fix inputWithPrefix/Suffix alignment; minor visual improvements

--- a/core-ui/src/index.scss
+++ b/core-ui/src/index.scss
@@ -156,6 +156,10 @@ header.sticky {
   content: '';
 }
 
+.fd-form-item .fd-form-select {
+  margin-top: 0.25rem; // to align with other inputs
+}
+
 li {
   list-style: none;
 }
