--- a/shared/components/InputWithPrefix/InputWithPrefix.scss
+++ b/shared/components/InputWithPrefix/InputWithPrefix.scss
@@ -22,5 +22,6 @@
     padding: 0 0.1em 0 8px;
 
     white-space: nowrap;
+    margin-top: 0.25rem;
   }
 }
