--- a/shared/components/InputWithSuffix/InputWithSuffix.scss
+++ b/shared/components/InputWithSuffix/InputWithSuffix.scss
@@ -20,5 +20,6 @@
     border-bottom-right-radius: 4px;
     padding: 0 8px;
     white-space: nowrap;
+    margin-top: 0.25rem;
   }
 }
