--- a/shared/components/Notification/Notification.scss
+++ b/shared/components/Notification/Notification.scss
@@ -69,6 +69,7 @@
     padding: 12px 12px;
     box-sizing: border-box;
     position: relative;
+    overflow-wrap: break-word;
   }
 
   .notification-title {
